# StegoWave

./: .gitignore  Cargo.toml  LICENSE  README.md  sw_config.toml
app/: Cargo.toml
cli/: Cargo.toml
cli/src/: cli.rs  client_request.rs  configuration.rs  formating.rs  main.rs  startup.rs
grpc_service/: Cargo.toml  build.rs
grpc_service/client/: Cargo.toml  build.rs  grpc_client.rs  lib.rs  streaming.rs
grpc_service/client/src/: grpc_client.rs  lib.rs  streaming.rs
grpc_service/client/tests/: client.rs
grpc_service/proto/: stego_wave.proto
grpc_service/server/: Cargo.toml  main.rs
grpc_service/server/services/: mod.rs  stego_wave.rs  streaming.rs
grpc_service/server/src/: configuration.rs  lib.rs  main.rs  startup.rs
grpc_service/server/src/services/: mod.rs  stego_wave.rs
rest_service/client/: Cargo.toml  error.rs  lib.rs  rest_client.rs
rest_service/client/src/: lib.rs  rest_client.rs
rest_service/client/tests/: client.rs
rest_service/server/: Cargo.toml  configuration.rs  main.rs  startup.rs
rest_service/server/api/: api_docs.rs  stego_wave.rs
rest_service/server/models/: request_object.rs
rest_service/server/services/: stego_wave.rs
rest_service/server/src/: configuration.rs  lib.rs  main.rs  startup.rs  tracing_config.rs
rest_service/server/src/api/: mod.rs  stego_wave.rs
rest_service/server/src/models/: mod.rs  request_object.rs
rest_service/server/src/services/: mod.rs  stego_wave.rs
stego_wave/: Cargo.toml
stego_wave/src/: configuration.rs  error.rs  lib.rs  object.rs
stego_wave/src/formats/: mod.rs  wav.rs
tests_clients/: Cargo.toml
tests_clients/src/: lib.rs
