[workspace]
resolver = "2"
members = [
    "rest_service/client",
    "rest_service/server",
    "grpc_service",
    "stego_wave",
    "tests_clients",
    "cli",
]

[workspace.package]
version = "0.0.1"
authors = ["Ivan Rybachyk <ivan2005rubachyk@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
license-file = "./LICENSE"
description = "Service for audio file steganography with gRPC and REST architecture writen on Rust 🦀"
