[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.5.26", features = ["derive"]}
colored = "3.0.0"
tokio = { workspace = true}
hound = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
stego_wave = { workspace = true}
rest_client = { workspace = true }
grpc_client = { workspace = true }

[[bin]]
name = "sw"
path = "src/main.rs"