[package]
name = "tests_clients"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dev-dependencies]
stego_wave = {path = "../stego_wave"}
grpc_client = {package = "grpc_service", path = "../grpc_service"}
rest_client = {path = "../rest_service/client"}
hound = "3.5.1"
tokio = { version = "1.43.0", features = ["macros"]}
pretty_assertions = "1.4.1"