[package]
name = "grpc_client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tonic = "0.12.3"
url = "2.5.4"
tokio-stream = "0.1.17"
async-trait = "0.1.85"
futures = "0.3.31"
prost = "0.13.4"

stego_wave = {path = "../../stego_wave"}

[lib]
path = "src/lib.rs"

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
hound = "3.5.1"
pretty_assertions = "1.4.1"
config = "0.15.5"
tokio = { version = "1.43.0", features = ["macros"] }
grpc_server = {path = "../server"}

