[package]
name = "grpc_server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "grpc_server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tonic = "0.12.3"
prost = "0.13.4"
tokio = {version = "1.43.0", features = ["macros", "rt-multi-thread"]}
async-trait = "0.1.85"
futures = "0.3.31"
tokio-stream = "0.1.17"
bytes = "1.9.0"
config = "0.15.5"
serde = { version = "1.0.217", features = ["derive"]}

stego_wave = {path = "../../stego_wave" }
chrono = "0.4.39"
tracing-subscriber = "0.3.19"
url = "2.5.4"

[build-dependencies]
tonic-build = "0.12.3"