[package]
name = "grpc_server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "grpc_server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tokio-stream = "0.1.17"
bytes = "1.9.0"
async-trait = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
config = { workspace = true }
serde = { workspace = true}
tokio = { workspace = true }
stego_wave = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }