[package]
name = "rest_client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.12.12", features = ["multipart", "json"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"

[dev-dependencies]
hound = "3.5.1"

[lib]
name = "rest_client"
path = "lib.rs"